# get-issuing-certs

./: .gitignore  README.md  pyproject.toml
get_issuing_certs/: __init__.py  __main__.py
tests/: test_basics.py
