[tool.poetry]
name = "get-issuing-certs"
version = "0.1.0"
description = ""
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
license = "MPL-2"
readme = "README.md"
packages = [{include = "get_issuing_certs"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
ruff = "^0.1.2"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
